k8s/backend/azure-cognitive-services.yaml
apiVersion: cognitiveservices.azure.upbound.io/v1beta1
kind: Deployment
metadata:
  name: transcraibe-llm
spec:
  forProvider:
    cognitiveAccountIdSelector:
      matchLabels:
        cognitive-account-for: transcraibe
    model:
      - format: OpenAI
        name: gpt-4o-mini
        version: "2024-07-18"
    scale:
      - capacity : 100
        type: GlobalStandard
