k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transcraibe
  labels:
    app: transcraibe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transcraibe
  template:
    metadata:
      labels:
        app: transcraibe
    spec:
      containers:
      - name: backend
        image: etone/transcraibe-be:0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
