k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transcraibe-svc
spec:
  selector:
    app: transcraibe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
